--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -301,8 +301,17 @@ corepack_enable: true
 #   - exec: drush sql:sanitize
 #   - exec: drush updatedb
 #   - exec: drush cache:rebuild
+
 hooks:
+  post-start:
+    - exec-host: "ddev import-db --file=db/site.sql.gz  && ddev drush cim -y && ddev drush cr"
+
   pre-stop:
-    - exec-host: "ddev snapshot create auto-before-stop --project-root=$(pwd)"
+     - exec: "ddev drush cr && drush cex -y"  
+
+
+
+
+
 
 
