--- a/web/sites/default/files/config_vejRxSKiKe5tbgJHLeVl1tLRF3A2m6w-8D93UknVwXJAgcddlVAJ0pA0I9kbqSKoFlC0zs-Wgg/sync/system.site.yml
+++ b/web/sites/default/files/config_vejRxSKiKe5tbgJHLeVl1tLRF3A2m6w-8D93UknVwXJAgcddlVAJ0pA0I9kbqSKoFlC0zs-Wgg/sync/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: ijfbzDTN4CbE7Sr-6ubWzy_t1vH4OtU1doNCLssVz-4
 langcode: en
 uuid: 1520543e-201e-4bc5-a967-21bcef25b0c1
-name: 'Drush Site-Install'
+name: 'Drush Site-Install new'
 mail: admin@example.com
 slogan: ''
 page:
