--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -306,9 +306,10 @@ router_https_port: null
 hooks:
   post-start:
     - exec-host: "ddev import-db --file=db/site.sql.gz  && ddev drush cim -y && ddev drush cr"
+    - exec: "echo ✅ DB import After Start......."
 
   pre-stop:
-     - exec: "ddev drush cr && drush cex -y"  
+     - exec-host: "ddev drush cr && ddev drush cex -y && ddev drush sql-dump --gzip --result-file=../db/site.sql"
 
 
 
